20201028 add animal game

--- a/animal-privacy.html
+++ b/animal-privacy.html
@@ -30,11 +30,22 @@
 
       <div id="main">
         <div class="inner">
-          <h1>Detail Page</h1>
+          <h1>Animal Card Battle Privacy Policy</h1>
           <span class="image main" style="max-width: 500px; margin: 0 auto"
-            ><img src="images/cat1.jpg" alt=""
+            ><img src="images/animal.png" alt=""
           /></span>
-          <p>準備中です</p>
+          <h2>【利用者情報の取得】</h2>
+          <p>本アプリが利用者の個人情報を取得することはありません。</p>
+
+          <h2>【利用者情報の利用】</h2>
+          <p>本アプリが利用者の個人情報を利用することはありません。</p>
+
+          <h2>【利用者情報の第三者提供】</h2>
+          <p>本アプリが利用者の個人情報を第三者へ提供することはありません。</p>
+
+          <h2>【お問い合わせ先】</h2>
+          <p>何かご不明な点がございましたらお問い合わせください。</p>
+          <p>yuswim192@gmail.com</p>
         </div>
       </div>
 
