--- a/game.html
+++ b/game.html
@@ -30,11 +30,13 @@
 
       <div id="main">
         <div class="inner">
-          <h1>Detail Page</h1>
+          <h1>Game Page</h1>
           <span class="image main" style="max-width: 500px; margin: 0 auto"
-            ><img src="images/cat1.jpg" alt=""
+            ><img src="images/animal.png" alt=""
           /></span>
-          <p>準備中です</p>
+          <p>最大4人の友達とわいわい遊べる動物カードじゃんけんです！複雑な設定は一切ないので、誰でも簡単に楽しむことができます。かわいい動物が出てくるので、動物好きな人は特に楽しめるゲームになっています。</p>
+          <p>#動物 #じゃんけん #友達 #わいわい</p>
+          <p><a href="animal-privacy.html">プライバシーポリシーはこちら</a></p>
         </div>
       </div>
 
