--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@ print("welcome to yus's portfolio!")
               <span class="image">
                 <img src="images/cat6.jpg" alt="" />
               </span>
-              <a href="detail.html">
+              <a href="game.html">
                 <h2>Game</h2>
                 <div class="content">
-                  <p>Javascript</p>
+                  <p>Unity, C#</p>
                 </div>
               </a>
             </article>
