20201028 add animal movie

--- a/game.html
+++ b/game.html
@@ -35,6 +35,7 @@
             ><img src="images/animal.png" alt=""
           /></span>
           <p>最大4人の友達とわいわい遊べる動物カードじゃんけんです！複雑な設定は一切ないので、誰でも簡単に楽しむことができます。かわいい動物が出てくるので、動物好きな人は特に楽しめるゲームになっています。</p>
+          <video class="image main" src="movies/animal.mov" style="max-width: 500px; margin: 0 auto" controls></video>
           <p>#動物 #じゃんけん #友達 #わいわい</p>
           <p><a href="animal-privacy.html">プライバシーポリシーはこちら</a></p>
         </div>
