20210215 add web application

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ print("welcome to yus's portfolio!")
               <span class="image">
                 <img src="images/cat1.jpg" alt="" />
               </span>
-              <a href="detail.html">
+              <a href="web.html">
                 <h2>Web Application</h2>
                 <div class="content">
                   <p>PHP, Javascript, Laravel, React, SQL</p>
@@ -110,9 +110,10 @@ print("welcome to yus's portfolio!")
           <h2 id="skills" style="margin-top: 40px">Skills</h2>
           <p>
             C | C ++ | C # | Python | PHP | Javascript | Laravel | React | HTML
-            | CSS | SQL | Machine Learning | Computer Simulation
+            | CSS | SQL | Unity | Machine Learning(PyTorch) | Computer Simulation
           </p>
           <p>FE, Fundamental Information Technology Engineer(2019)</p>
+          <p>AP, Applied Information Technology Engineer(2020)</p>
         </div>
       </div>
 
