--- a/web.html
+++ b/web.html
@@ -30,20 +30,17 @@
 
       <div id="main">
         <div class="inner">
-          <h1>Game Page</h1>
-          <span class="image main" style="max-width: 500px; margin: 0 auto"
-            ><img src="images/animal.png" alt=""
+          <h1>Web Application</h1>
+          <span class="image main" style="max-width: 500px; margin: 10px auto"
+            ><img src="images/web1.png" alt=""
           /></span>
-          <p>最大4人の友達とわいわい遊べる動物カードじゃんけんです！複雑な設定は一切ないので、誰でも簡単に楽しむことができます。かわいい動物が出てくるので、動物好きな人は特に楽しめるゲームになっています。</p>
-          <video class="image main" src="movies/animal.mov" style="max-width: 500px; margin: 0 auto" controls></video>
-          <img class="image main" src="images/game1.png" style="max-width: 500px; margin: 20px auto">
-          <img class="image main" src="images/game2.png" style="max-width: 500px; margin: 20px auto">
-          <img class="image main" src="images/game3.png" style="max-width: 500px; margin: 20px auto">
-          <img class="image main" src="images/game4.png" style="max-width: 500px; margin: 20px auto">
-          <img class="image main" src="images/game5.png" style="max-width: 500px; margin: 20px auto">
-          <img class="image main" src="images/game6.png" style="max-width: 500px; margin: 20px auto">
-          <p>#動物 #じゃんけん #友達 #わいわい</p>
-          <p><a href="animal-privacy.html">プライバシーポリシーはこちら</a></p>
+          <span class="image main" style="max-width: 500px; margin: 10px auto"
+          ><img src="images/web2.png" alt=""
+        /></span>
+          <a href="https://kiik.jp">kiik.jp</a>
+          <p>zoomを使ったオンライン相談サービスの提供アプリ</p>
+          <p>一般ユーザーは、数いる相談相手の中から自分に合った人を選び、
+            日時を指定して予約し、実際にzoomを使ってオンライン相談をすることができます</p>
         </div>
       </div>
 
